# Rust_FII

./: README.md
lab01/src/: main.rs
lab02/src/: main.rs
lab03/: Cargo.toml
lab03/src/: main.rs
lab04/: Cargo.toml
lab04/src/: main.rs
lab05/: Cargo.toml  person.json  start.txt
lab05/src/: main.rs
lab06/: Cargo.toml  bookmarks.db  command_file.txt
lab06/src/: main.rs
lab07/src/: main.rs
lab08/: Cargo.toml
lab08/src/: main.rs
lab09/: input.txt  output.txt
lab09/base64/: Cargo.toml
lab09/base64/src/: lib.rs
lab09/encoder/: --  Cargo.toml
lab09/encoder/src/: main.rs
lab10/src/: main.rs
lab11/src/: main.rs
opt_contest_1/: input.txt  output.txt
opt_contest_1/src/: main.rs
project/: Cargo.toml
project/src/: main.rs
