workspace = { members = ["lab09"] }
[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.52.0"
windows-sys = "0.52.0"
tasklist = "0.2.13"
sysinfo = "0.29.11"
simple-process-stats = "1.0.0"
druid = "0.8.3"
